# python-ubersmith-remote-module-server

./: .gitignore  .travis.yml  README.md  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
pyubwebhook/: __init__.py  api.py  router.py  server.py
tests/: __init__.py  test_api.py  test_remote.py  test_remote_executor.py  test_router.py  test_server.py  test_ubersmith_core.py
tests/Integration/: __init__.py  test_router_ubersmith_core.py
ubersmith_remote_module_server/: __init__.py  _remote_executor.py  api.py  exceptions.py  objects.py  remote.py  router.py  server.py  ubersmith_core.py
