[metadata]
name = pyubwebhook
url = https://github.com/internap/pyubwebhook
author = Internap
author-email = opensource@internap.com
summary = A ubwebhook library
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python :: 2.7

[files]
packages =
    pyubwebhook

[nosetests]
no-path-adjustment = 1
logging-level = DEBUG
verbosity = 2
