[metadata]
name = ubersmith-remote-module-server
url = https://github.com/internap/python-ubersmith-remote-module-server
author = Internap
author-email = opensource@internap.com
summary = A ubersmith remote module server
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4

[files]
packages =
    remote_module_server

[bdist_wheel]
universal = 1

[nosetests]
no-path-adjustment = 1
logging-level = DEBUG
verbosity = 2
